--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
+    android:visibility="visible">
 
     <TextView
         android:id="@+id/listvenue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginTop="22dp"
+        android:text="TextView"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/listdate"
@@ -16,37 +26,96 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/listvenue"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/listtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/listvenue"
+        android:layout_marginTop="18dp"
         android:text="TextView"
-        android:layout_alignTop="@+id/date" />
+        android:textColor="@android:color/darker_gray"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/listtime"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:text="VS"
+        android:textColor="@android:color/black" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/listtime"
+        android:layout_marginEnd="13dp"
+        android:layout_marginRight="13dp"
+        android:layout_marginTop="43dp"
+        android:layout_toLeftOf="@+id/textView"
+        android:layout_toStartOf="@+id/textView"
+        android:scaleType="centerCrop"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_toRightOf="@+id/textView"
+        android:scaleType="centerCrop"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/listvenue"
+        android:layout_alignEnd="@+id/imageView2"
+        android:layout_alignRight="@+id/imageView2"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Match Procedings"
+        android:textAlignment="center"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/listteam1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
+        android:layout_alignTop="@+id/textView"
+        android:layout_marginEnd="24dp"
+
+        android:layout_marginRight="24dp"
+        android:layout_toLeftOf="@+id/imageView"
+        android:layout_toStartOf="@+id/imageView"
         android:text="TextView"
-        android:layout_below="@+id/listdate"
-        android:layout_toRightOf="@+id/listdate"
-        android:layout_toEndOf="@+id/listdate"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp" />
+        android:textColor="#868686"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/listteam2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView"
+        android:layout_marginLeft="27dp"
+        android:layout_marginStart="27dp"
+        android:layout_toEndOf="@+id/imageView2"
+        android:layout_toRightOf="@+id/imageView2"
         android:text="TextView"
-        android:layout_alignBaseline="@+id/listteam1"
-        android:layout_alignBottom="@+id/listteam1"
-        android:layout_toLeftOf="@+id/listtime"
-        android:layout_toStartOf="@+id/listtime" />
+        android:textColor="#868686"
+        android:textSize="20sp" />
+
+
 </RelativeLayout>
